[package]
name = "mazegen"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "fortunes"
path = "src/fortunes.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
multimap = "0.10.0"
rand = "0.9.2"
wasm-bindgen = "0.2"
svg = "0.18.0"

[dependencies.web-sys]
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'ImageData']
version = "0.3.70"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
    "js",
]
